--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "grvt-js-client",
+  "name": "grvt-client",
   "version": "0.0.1",
   "description": "Node.js & JavaScript SDK for GRVT REST APIs & WebSockets",
   "repository": {
