--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,6 +24,7 @@
   },
   "rules": {
     "@typescript-eslint/explicit-function-return-type": "off",
+    "@typescript-eslint/no-extraneous-class": "off",
     "@typescript-eslint/strict-boolean-expressions": "off"
   }
 }
