--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
   "homepage": "https://github.com/gravity-technologies/grvt-js-client#readme",
   "scripts": {
     "start": "tsc --watch",
+    "prebuild": "rimraf dist",
     "build": "tsc",
     "postbuild": "cp package.json dist/ && cp README.md dist/ && cp LICENSE dist/",
+    "prerelease": "npm run build",
+    "release": "cd dist/ && npm publish",
     "link-local": "cd dist/ && npm link && cd ..",
     "lint": "npx eslint src/**/*.{js,ts}",
     "lint-fix": "npx eslint src/**/*.{js,ts} --fix",
@@ -34,6 +37,7 @@
     "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-n": "^16.3.0",
     "eslint-plugin-promise": "^6.1.1",
+    "rimraf": "^5.0.5",
     "typescript": "^5.2.2"
   }
 }
