--- a/.github/workflows/release-n-publish.yml
+++ b/.github/workflows/release-n-publish.yml
@@ -3,7 +3,7 @@ name: Release & Publish
 on:
   push:
     branches:
-      - d/construct
+      - main
     paths:
       - .github/workflows/release.yaml
       - src/**
