--- a/.github/workflows/release-n-publish.yml
+++ b/.github/workflows/release-n-publish.yml
@@ -3,7 +3,7 @@ name: Release & Publish
 on:
   push:
     branches:
-      - main
+      - ci
     paths:
       - .github/workflows/release.yaml
       - src/**
@@ -48,5 +48,5 @@ jobs:
             cache-dependency-path: package-lock.json
 
         - run: npm ci
-        - run: npm config set _authToken=${{ secrets.NPM_PUBLISH_TOKEN }}
+        - run: npm config set //registry.npmjs.org/:_authToken xxxxxxxx
         - run: npm run release
