--- a/.github/workflows/release-n-publish.yml
+++ b/.github/workflows/release-n-publish.yml
@@ -3,7 +3,7 @@ name: Release & Publish
 on:
   push:
     branches:
-      - ci
+      - main
     paths:
       - .github/workflows/release-n-publish.yml
       - src/**
@@ -20,25 +20,25 @@ jobs:
           id: tag-version
           uses: martinbeentjes/npm-get-version-action@v1.3.1
 
-        # - name: Push tag
-        #   uses: mathieudutour/github-tag-action@v6.1
-        #   with:
-        #     github_token: ${{ secrets.GITHUB_TOKEN }}
-        #     tag_prefix: v
-        #     custom_tag: ${{ steps.tag-version.outputs.current-version }}
-        #     fetch_all_tags: true
+        - name: Push tag
+          uses: mathieudutour/github-tag-action@v6.1
+          with:
+            github_token: ${{ secrets.GITHUB_TOKEN }}
+            tag_prefix: v
+            custom_tag: ${{ steps.tag-version.outputs.current-version }}
+            fetch_all_tags: true
 
-        # - name: Create Release
-        #   id: create-release
-        #   uses: actions/create-release@v1
-        #   env:
-        #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        #   with:
-        #     tag_name: v${{ steps.tag-version.outputs.current-version }}
-        #     release_name: Release v${{ steps.tag-version.outputs.current-version }}
-        #     body: Release v${{ steps.tag-version.outputs.current-version }}
-        #     draft: false
-        #     prerelease: false
+        - name: Create Release
+          id: create-release
+          uses: actions/create-release@v1
+          env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          with:
+            tag_name: v${{ steps.tag-version.outputs.current-version }}
+            release_name: Release v${{ steps.tag-version.outputs.current-version }}
+            body: Release v${{ steps.tag-version.outputs.current-version }}
+            draft: false
+            prerelease: false
 
         - uses: actions/setup-node@v4
           with:
