--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "grvt",
-  "version": "0.1.1-alpha.0",
+  "version": "0.1.1-beta.14",
   "description": "Node.js & JavaScript SDK for GRVT REST APIs & WebSockets",
   "repository": {
     "type": "git",
