--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "grvt",
-  "version": "0.2.1-beta.0",
+  "version": "0.3.0-beta.0",
   "description": "Node.js & JavaScript SDK for GRVT REST APIs & WebSockets",
   "repository": {
     "type": "git",
@@ -9,12 +9,15 @@
   "keywords": [
     "GRVT"
   ],
-  "author": "danh@grvt.io",
-  "license": "UNLICENSED",
   "bugs": {
     "url": "https://github.com/gravity-technologies/grvt-js-client/issues"
   },
   "homepage": "https://github.com/gravity-technologies/grvt-js-client#readme",
+  "author": "danh@grvt.io",
+  "license": "UNLICENSED",
+  "engines": {
+    "node": ">=20"
+  },
   "scripts": {
     "start": "tsc --watch",
     "prebuild": "rimraf dist",
