--- a/package.json
+++ b/package.json
@@ -31,8 +31,7 @@
     "test": "nodemon dist/index.js"
   },
   "dependencies": {
-    "axios": "^0.28.1",
-    "nanoid": "^3.3.6"
+    "axios": "^0.28.1"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.10.0",
