--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "grvt",
-  "version": "1.4.0-beta.0",
+  "name": "@grvt/client",
+  "version": "1.4.0",
   "description": "Node.js & JavaScript SDK for GRVT REST APIs & WebSockets",
   "repository": {
     "type": "git",
@@ -18,13 +18,15 @@
   "engines": {
     "node": ">=20"
   },
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "start": "tsc --watch",
     "prebuild": "rimraf dist",
     "build": "tsc",
     "postbuild": "cp package.json dist/ && cp README.md dist/ && cp LICENSE dist/",
     "prerelease": "npm run build",
-    "release": "cd dist/ && npm publish",
+    "release": "cd dist/ && npm publish --access public",
     "link-local": "cp package.json dist/ && cd dist/ && npm link && cd ..",
     "lint": "npx eslint \"src/**/*.{js,ts}\"",
     "lint-fix": "npx eslint \"src/**/*.{js,ts}\" --fix",
