--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@grvt/client",
-  "version": "1.4.4",
+  "version": "1.4.5",
   "description": "Node.js & JavaScript client for GRVT REST APIs & WebSockets",
   "repository": {
     "type": "git",
@@ -18,8 +18,8 @@
   "engines": {
     "node": ">=20"
   },
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "index.js",
+  "types": "index.d.ts",
   "scripts": {
     "start": "tsc --watch",
     "prebuild": "rimraf dist",
