--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@grvt/client",
-  "version": "1.4.11",
+  "version": "1.4.12-fix.0",
   "description": "Node.js & JavaScript client for GRVT REST APIs & WebSockets",
   "repository": {
     "type": "git",
