--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@grvt/client",
-  "version": "1.4.30",
+  "version": "1.5.0-alpha.0",
   "description": "Node.js & JavaScript client for GRVT REST APIs & WebSockets",
   "repository": {
     "type": "git",
