--- a/.github/workflows/release-n-publish.yml
+++ b/.github/workflows/release-n-publish.yml
@@ -18,7 +18,7 @@ jobs:
   ReleaseAndPublish:
     runs-on: ubuntu-latest
     env:
-      node: ">=22"
+      node: "22.x"
     steps:
         - uses: actions/checkout@v4
 
